--- a/styles.css
+++ b/styles.css
@@ -5,11 +5,14 @@ body{
 }
 head {
 	width:95%;
+
 }
 
 ul {
     list-style-type: none;
     margin-right: 50px;
+    height: 50px;
+    width: 95%;
     
     overflow: hidden;
     }
@@ -98,6 +101,25 @@ p {
 	background-color: #1B4F72;
 }
 
+.streambtn{
+	background-color:#5DAE5D;
+	border-radius: 4px;
+	border: #5DAE5D;
+	color: #fff;
+	padding: 10px 12px 10px 12px;
+    font-size: 14px;
+
+	 }
+.treatbtn{
+	background-color:#D0C6B9;
+	border-radius: 4px;
+	border: #D0C6B9;
+	color: #fff;
+	padding: 10px 19px 10px 19px;
+    font-size: 14px;
+
+	 }
+
 .page-header {
 	text-align: center;
 
@@ -114,6 +136,11 @@ p {
     width: 80%;
 	
 	}
+.streambox{
+	width: 500px;
+	height: 350px;
+
+}
 
 
 h1 {
